# metar-rs

./: Cargo.toml  LICENSE  README.md  metar.abnf
.github/workflows/: check-version-bumped.yaml  checks.yaml  publish.yaml  rust-fmt.yml  rust-publish.yml  rust-test.yml
examples/: basic.rs  nicer_errors.rs  repl.rs  test_lots.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: metar.rs
src/: error.rs  lib.rs  parsers.rs  traits.rs  types.rs
src/parser/: metar.pest  mod.rs
src/parsers/: errors.rs  mod.rs
src/types/: cloud_layer.rs  cloud_state.rs  cloud_type.rs  colour_code.rs  data.rs  kind.rs  metar.rs  pressure.rs  runway_condition.rs  rvr.rs  sea_condition.rs  time.rs  trend.rs  vertical_visibility.rs  visibility.rs  weather.rs  weather_condition.rs  weather_intensity.rs  wind.rs  wind_direction.rs  wind_speed.rs  windshear_warnings.rs
tests/: cucumber.rs  metars.rs  serde_tests.rs  simple_passes.rs  special_cases.rs
tests/features/: parsing.feature
