[package]
name = "metar"
version = "0.9.3"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
edition = "2021"
description = "A fast METAR parsing library in pure Rust"
license = "MIT"
homepage = "https://github.com/lilopkins/metar-rs"
repository = "https://github.com/lilopkins/metar-rs"
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
annotate-snippets = "0.12"
chumsky = { version = "0.12", features = ["regex"] }
derive_more = { version = "2.1", features = ["display"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0"
async-trait = "0.1"
cucumber = "0.22"
futures = "0.3"
serde_json = "1"

[[test]]
name = "cucumber"
harness = false
